--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </section>
 
     <footer>
-
+        <p class="ad" >Project Made By Anam and Aditya </p>
     </footer>
 
     <script src="./scripts/main.js"></script>   <!--This should be at the end of body and should be loaded before sorts.js-->
